add pretrained models

--- a/experiments/80_mel.cfg
+++ b/experiments/80_mel.cfg
@@ -1,8 +1,9 @@
 [experiment]
 seed=1
-folder=experiments/80_mel
+folder=experiments/80_mel_no_frame_skipping
 
 [model]
+frame_skipping=False
 num_layers=2
 num_hidden=512
 num_mel_bins=80
